resolve os requisitos 2 e 3

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
     <head>    
-        <meta charset="pt-br">
-        <title> 
-            Helder Emanuel : Projeto Pixels Art
-        </title>  
-        <link rel="stylesheet" href="style.css">
+    <meta charset="pt-br">
+    <title> Helder Emanuel : Projeto Pixels Art</title>  
+    <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1 id="title">PALETA DE CORES</h1>
-        <div id = "color-pallete"></div>
+      <main>
+        <header id="title-home">
+          <h1 id="title">Paleta de Cores</h1>
+        </header>
+        <div id="color-palette"></div>
         <script src="script.js"></script>
+      </main>
     </body>
 </html>
