--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <div class="color" id="square3"></div>
     <div class="color" id="square4"></div>
   </div>
+  <button id="clear-board">"Limpar"</button>   
   <div id="pixel-board">
-  </div>   
+  </div>
 <script src="script.js"></script>
 </body>
 </html>
