requesito n11 e function createLine

--- a/index.html
+++ b/index.html
@@ -16,16 +16,12 @@
             <div class="color"></div>
             <div class="color"></div>
         </section>
+        <input type="text" id="board-size">
+        <button type="button" id="generate-board">#VQV</button>
         <button type="button" id="clear-board">Limpar</button>
     </header>
     <main>
-        <section id="pixel-board">
-            <div class="line-pixel"></div>
-            <div class="line-pixel"></div>
-            <div class="line-pixel"></div>
-            <div class="line-pixel"></div>
-            <div class="line-pixel"></div>
-        </section>
+        <section id="pixel-board"></section>
     </main>
 
     <script src="script.js"></script>
