--- a/index.html
+++ b/index.html
@@ -16,41 +16,43 @@
         <div class="color pink"></div>
     </div>
 
+    <button id="clear-board">Limpar</button>
+
     <div id="pixel-board">
         <div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
         </div>
         <div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
         </div>
         <div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
         </div>
         <div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
         </div>
         <div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
+            <div class="pixel white"></div>
         </div>
     </div>
 </body>
