finaliza os obrigatórios

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <div class="color" id="yellow">yellow</div>
         <div class="color" id="blue">blue</div>
     </section>
+    <div id="button">
+        <button type="button" id="clear-board">Limpar</button>
+    </div>
     <main>
         <div id="pixel-board">
             <div class="pixel"></div>
