--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </header>
 
     <section id="color-palette">
-      <div id="preto" class="color selected"></div>
-      <div id="verde" class="color"></div>
-      <div id="azul" class="color"></div>
-      <div id="violeta" class="color"></div>
+      <div class="color  preto selected"></div>
+      <div class="color verde"></div>
+      <div class="color azul"></div>
+      <div class="color violeta"></div>
     </section>
 
     <div id="pixel-board">
