--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <button id="blue" class="color"></button>
 </div>
 
+<button id="clear-board">Limpar</button>
+
 <div id="pixel-board">
 
 <div class="line">
