--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
                 <h1 id="tools-titlle">Ferramentas de Desenho</h1>
                 <div id="tools-bar">
                     <label for="">Limpar Dezenho</label>
-                    <button id="clear" class="tool-botton">Limpar</button>
+                    <button id="clear-board" class="tool-botton">Limpar</button>
                     <label for="">Tabela</label>
-                    <input id="size-line" class="grid-size" type="number"
-                    placeholder="Linhas">
-                    <input id="size-colum" class="grid-size" type="number"
-                    placeholder="Colunas">
-                    <button id="create" class="tool-botton">Criar</button>
+                    <input id="board-size" class="grid-size" type="number" min="1" max="5" placeholder="Linhas">
+                    <input id="size-colum" class="grid-size" type="number" min="1" max="5" placeholder="Colunas">
+                    <button id="create" class="tool-botton">Criar VQV</button>
                 </div>
             </section>
         </aside>
@@ -39,6 +37,10 @@
             <section id="palette">
                 <h1 id="title">Paleta de Cores</h1>
                 <div id="color-palette">
+                    <div id="color1" class="color selected"></div>
+                    <div id="color2" class="color"></div>
+                    <div id="color3" class="color"></div>
+                    <div id="color4" class="color"></div>
                 </div>
             </section>
             <!-- Tabela de Pixel -->
