--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             <div class='pixel'></div>
             <div class='pixel'></div>
         </div>
+
     </main>
-    
+    <script src="script.js"></script>
 </body>
 </html>
