--- a/index.html
+++ b/index.html
@@ -8,13 +8,53 @@
         <header>
             <h1 id="title">Paleta de Cores</h1>
         </header>
-        <div id="color-palette">
-            <div class="color" id="black" ></div>
-            <div class="color" id="red" ></div>
-            <div class="color" id="blue"></div>
-            <div class="color" id="purple"></div>
-        </div>
-        
-        
+        <main>
+            <div id="color-palette">
+                <div class="color" id="black" ></div>
+                <div class="color" id="red" ></div>
+                <div class="color" id="blue"></div>
+                <div class="color" id="purple"></div>
+            </div>
+        <br><br>
+            <button id="clear-board">"Limpar"</button>
+        <br><br>
+        <br><br>
+            <div id="pixel-board">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+            <div id="pixel-board">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+            <div id="pixel-board">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+            <div id="pixel-board">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+            <div id="pixel-board">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+        </main>
+        <script src="script.js" ></script>
     </body>
 </html>
