atualizado posicionamento do layout

--- a/index.html
+++ b/index.html
@@ -18,22 +18,8 @@
         <figcaption id="logo-text">@Trybe</figcaption>
     </figure>
     <main>
-        <aside id="indice">
-            <!-- Ferramentas -->
-            <section id="tools">
-                <h1 id="tools-titlle">Ferramentas de Desenho</h1>
-                <div id="tools-bar">
-                    <label for="">Limpar Dezenho</label>
-                    <button id="clear-board" class="tool-botton">Limpar</button>
-                    <label for="">Tabela</label>
-                    <input id="board-size" class="grid-size" type="number" min="1" max="5" placeholder="Linhas">
-                    <input id="size-colum" class="grid-size" type="number" min="1" max="5" placeholder="Colunas">
-                    <button id="create" class="tool-botton">Criar VQV</button>
-                </div>
-            </section>
-        </aside>
+        <!-- Paleta de Cores -->
         <section id="pixel-grid">
-            <!-- Paleta de Cores -->
             <section id="palette">
                 <h1 id="title">Paleta de Cores</h1>
                 <div id="color-palette">
@@ -43,6 +29,25 @@
                     <div id="color4" class="color"></div>
                 </div>
             </section>
+            <aside id="indice">
+                <!-- Ferramentas -->
+                <section id="tools">
+                    <h1 id="tools-titlle">Ferramentas de Desenho</h1>
+                    <div id="tools-bar">
+                        <div id="clear-button">
+                            <label for="">Limpar Dezenho</label>
+                            <button id="clear-board" class="tool-botton">Limpar</button>
+                        </div>
+                        <div id="create-button">
+                            <label for="">Tabela<button id="generate-board" class="tool-botton">Criar
+                                    VQV</button></label>
+                            <input id="board-size" class="grid-size" type="number" min="1" max="5" placeholder="Linhas">
+                            <input id="size-colum" class="grid-size" type="number" min="1" max="5"
+                                placeholder="Colunas">
+                        </div>
+                    </div>
+                </section>
+            </aside>
             <!-- Tabela de Pixel -->
             <section id="pixel-board">
             </section>
@@ -52,12 +57,16 @@
         <section id="credits">
             <nav id="credits-links">
                 <ul id="links-list">
-                    <li class="list-item"><a class="list-item-link"
-                            href="https://www.instagram.com/dev.codding/">Instagram</a></li>
-                    <li class="list-item"><a class="list-item-link"
-                            href="https://www.linkedin.com/in/lucas-camargo-80a015190/">Linkedin</a>
+                    <li class="list-item"><a target="_blank" class="list-item-link"
+                            href="https://www.instagram.com/dev.codding/">
+                            <img class="icon" src="/icon/circle-instagram.png" alt="Instagram"> Instagram</a></li>
+                    <li class="list-item"><a target="_blank" class="list-item-link"
+                            href="https://www.linkedin.com/in/lucas-camargo-80a015190/"> <img class="icon"
+                                src="/icon/circle-linkedin_.png" alt="Instagram">Linkedin</a>
                     </li>
-                    <li class="list-item"><a class="list-item-link" href="https://github.com/lbcamargo94">Github</a>
+                    <li class="list-item"><a target="_blank" class="list-item-link"
+                            href="https://github.com/lbcamargo94"> <img class="icon" src="/icon/circle-github.png"
+                                alt="Instagram">Github</a>
                     </li>
                 </ul>
             </nav>
