--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="color"></div>
             <div class="color"></div>
         </section>
-        <input type="text" id="board-size">
+        <input type="number" id="board-size" min="1">
         <button type="button" id="generate-board">#VQV</button>
         <button type="button" id="clear-board">Limpar</button>
     </header>
