--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
         <header id="title-home">
           <h1 id="title">Paleta de Cores</h1>
         </header>
-        <div id="color-palette"></div>
-        <script src="script.js"></script>
+        <section id = "paleta de cores">
+          <div id="color-palette"></div>
+        </section>
+        <section id="canvas">
+          <div id = "pixel-board"></div>
+        </section>
       </main>
+      <script src="script.js"></script>
     </body>
 </html>
