--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="color" id="blue"></div>
     <div class="color" id="green"></div>
   </div>
+  <button id="clear-board">Limpar</button>
   <section id="pixel-board">
       <!-- linha A -->
       <div class="pixel" id="a1"></div>
