--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <div class="color" id="thirdColor"></div>
       <div class="color" id="fourthColor"></div>
     </section>
+    <section>
+      <button id="clear-board">Limpar</button>
+    </section>
     <section id="pixel-board">
       <div class="pixel"></div>
       <div class="pixel"></div>
