--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
       <div class="color" id="thirdColor"></div>
       <div class="color" id="fourthColor"></div>
     </section>
-    <section>
-      <button id="clear-board">Limpar</button>
+    <section > 
+      <button id="clear-board" class="buttons">Limpar</button>
     </section>
+    <form id= options>
+      <input type="number" id="board-size" min="5" max="50">
+      <button id="vqv" class="buttons">VQV</button>
+    </form>
     <section id="pixel-board">
       <div class="pixel"></div>
       <div class="pixel"></div>
