--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </section>
     <section id="section-tools">
       <button id="clear-board">Limpar</button>
-      <input type="number" id="board-size" min="1" max="50">
+      <input type="number" id="board-size" min="1">
       <button id="generate-board">VQV</button>
     </section>
-    <section>
+    <section id="boardSection">
       <div id="pixel-board"></div>
     </section>
   </main>
