--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1 id="title">Paleta de Cores</h1>
-    <div id="color-palette" ></div>
-<section id="inputs-content">
-    <button id="clear-board">Limpar</button>
-    <input id="board-size" type="number" min="1">
-    <button id="generate-board">VQV</button>
-</section>
-<div id="board-center">
-    <div id="pixel-board"></div>
-</div>
-    <script src = "script.js" ></script>
-</body>
+    <div id="color-palette"></div>
+    <section id="inputs-content">
+      <button id="clear-board">Limpar</button>
+      <input id="board-size" type="number" min="1" />
+      <button id="generate-board">VQV</button>
+    </section>
+    <div id="board-center">
+      <div id="pixel-board"></div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
