--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
         <section id="color-palette">
-            <div class="color black"></div>
+            <div class="color black selected"></div>
             <div class="color red"></div>
             <div class="color blue"></div>
             <div class="color green"></div>
