--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
 
     <main>
+        <!-- Paleta de Cores --> 
         <section id="color-palette">
             <div class="color black selected"></div>
             <div class="color red"></div>
@@ -21,6 +22,10 @@
             <div class="color green"></div>
         </section>
 
+        <!-- Botão para limpar o quadro -->
+        <button type="button" id="clear-board">Limpar</button>
+
+        <!-- Quadro de Pixels -->
         <section id="pixel-board">
             <div id="first-line"></div>
             <div id="second-line"></div>
