--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
     <body>
         <h1 id="title">Paleta de Cores</h1>
         <section id="color-palette">
-            <div class="color color1 selected"></div>
+            <div class="color color0"></div>
+            <div class="color color1"></div>
             <div class="color color2"></div>
             <div class="color color3"></div>
-            <div class="color color4"></div>
         </div>
-        </section>
+    </section>
+    
+        <div>
+        <button id="clear-board">Limpar</button>
+        <input id="board-size" type="number" min="1" max="50">
+        <button id="generate-board">VQV</button>
+        </div>
+ 
         <section id="pixel-board" class="pixel-board">
             <div class="pixel"></div>
             <div class="pixel"></div>
