--- a/index.html
+++ b/index.html
@@ -16,36 +16,16 @@
     <section > 
       <button id="clear-board" class="buttons">Limpar</button>
     </section>
-    <form id= options>
-      <input type="number" id="board-size" min="1" max="50">
-      <button id="vqv" class="buttons">VQV</button>
-    </form>
+    <section id="sizeBoard">
+      <input type="number" min="5" max="50" id="board-size" placeholder="Escolha o tamanho do seu quadro de pixels">
+      <button id="generate-board" class="bot">VQV</button>
+    </section>
     <section id="pixel-board">
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
+      <div class="pixel-row"></div>
+      <div class="pixel-row"></div>
+      <div class="pixel-row"></div>
+      <div class="pixel-row"></div>
+      <div class="pixel-row"></div>
     </section>
     <script src="script.js"></script>
   </body>
