--- a/index.html
+++ b/index.html
@@ -16,23 +16,9 @@
         <h1 id="title">Paleta de Cores</h1>
     </header>
     <main>
-        <section id="palette">
-            <div id="color-palette" class="center" style="width: max-content;">
-                <!-- Cores - Recentes -->
-            </div>
-            
-            <!-- Cor - Seleção -->
-            <div>
-                <!-- Pop-up Cores -->
-                <span class="pop-color-grade"></span>
-            </div>
-        </section>
-        <section id="buttons">
-            <button id="clear-board" style="margin: 10px auto; display: block; padding: 10px;">Limpar</button>
-        </section>
-        <section id="board">
-            <div id="pixel-board" class="pixel-board"></div>
-        </section>
+        <section id="palette"><div id="color-palette" class="center" style="width: max-content;"></div><div><span class="pop-color-grade"></span></div></section>
+        <section id="buttons"><button id="clear-board" style="margin: 10px auto; display: block; padding: 10px;">Limpar</button></section>
+        <section id="board"><div id="pixel-board" class="pixel-board"></div></section>
     </main>
 </body>
 </html>
