--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <meta charset="utf-8">
         <title>pixel art</title>
         <link rel="stylesheet" href="style.css">
-        <script type="text/javascript" src="script.js"></script>       
+         
 
     </head>
     <body>
+        
         <h1 id="title">Paleta de Cores</h1>
         <div id="color-palette">
             <div class="color" id="black">   </div>
@@ -16,10 +17,16 @@
             <div class="color" id="purple">   </div>
         </div>
 
-        <div id="pixel-board"></div>
+        <div id="pixel-board">
+            <div id="L1" class="selected"></div>
+            <div id="L2"></div>
+            <div id="L3"></div>
+            <div id="L4"></div>
+            <div id="L5"></div>
+
+        </div>
 
 
-
-
+ <script src="script.js"> </script "text/javascript" >    
     </body>
 </html>
