--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
   <meta charset="UTF-8">
   <title>Project Pixels Art</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-    <header>
-        <h1 id="title";>Paleta de Cores</h1>
-    </header>
-    <main>
-      <div id="color-palette";>
-      </div>
-      <div id="pixel-board">
-      </div>
-    </main>
+  <header>
+    <h1 id="title">Paleta de Cores</h1>
+  </header>
+  <main>
+    <div id="color-palette">
+    </div>
+    <div>
+      <button id="clear-board">Limpar</button>
+      <input type="number" id="board-size" min="0" max="50" value="5">
+      <button id="generate-board">VQV</button>
+    </div>
+    <div id="pixel-board">
+    </div>
+  </main>
+  <script type="text/javascript" src="script.js"></script>
 </body>
