tentando concertar o requisito 10

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button id="clear-board" class="buttons">Limpar</button>
     </section>
     <section id="sizeBoard">
-      <input type="number" min="5" max="50" id="board-size"> 
+      <input type="number" min="5" max="50" id="board-size"  value="" oninput="validity.valid||(value='');" /> 
       <button id="generate-board" class="bot">VQV</button>
     </section>
     <section id="pixel-board">
