--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <div class='pixel'></div>
             <div class='pixel'></div>
         </div>
-
-
+        <input type="button" value="Clear" id="clear">
+        
     </main>
     <script src="script.js"></script>
 </body>
