--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <h1 id = "title">Paleta de Cores</h1>
     <section>
         <div id="color-palette">
-            <div class="color" id="blue">teste</div>
+            <div class="color" id="black">teste</div>
             <div class="color" id="red">teste</div>
             <div class="color" id="yellow">teste</div>
             <div class="color" id="purple">teste</div>
+        </div>
+        <br>
+        <div id="pixel-board">
         </div>
     </section>
     <script src="script.js"></script>
