--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button id="clear-board" class="buttons">Limpar</button>
     </section>
     <section id="sizeBoard">
-      <input type="number" min="5" max="50" id="board-size" step="1" pattern="\d+"> 
+      <input type="number" min="1" max="50" id="board-size" placeholder="Dimensão"> 
       <button id="generate-board" class="bot">VQV</button>
     </section>
     <section id="pixel-board">
