--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Project Pixels Art</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body>
+  <body> 
+    <header>Pixels Art!</header>
+    <img id=img src="imagempixel.png">
     <h1 id="title">Paleta de Cores</h1>
     <section id="color-palette">
       <div class="color" id="firstColor"></div>
