--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       <div class="pixel-row"></div>
       <div class="pixel-row"></div>
     </section>
+    <footer id=ft>
+      Desenvolvido por Amanda Sottani Nascimento
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
