requisitos do 1 ao 5

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <header id="header">  
   <h1 id="title">Paleta de Cores</h1>
   </header>
@@ -18,12 +19,11 @@
           <button id="cor2" class="color"></button>
           <button id="cor3" class="color"></button>
           <button id="cor4" class="color"></button>
-          <button id="cor5" class="color"></button>
       </div>
   </div>
 
-  <main class="pixel-board">
-  <fieldset id='bordaFildSet'>      
+  <div class="grade">
+  <main id="pixel-board">
       <button class="pixel"></button>
       <button class="pixel"></button>
       <button class="pixel"></button>
@@ -49,8 +49,8 @@
       <button class="pixel"></button>
       <button class="pixel"></button>
       <button class="pixel"></button>
-  </fieldset>   
-  </main>
+    </main>
+  </div>       
     
 
 <script src="script.js"></script>    
