--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <div class="painel-color">
       <div id="color-palette">
-          <button id="cor1" class="color"></button>
+          <button id="cor1" class="color selected"></button>
           <button id="cor2" class="color"></button>
           <button id="cor3" class="color"></button>
           <button id="cor4" class="color"></button>
