--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="board-container">
         <h1 id="title">Paleta de Cores</h1>
         <div id="color-palette">
-            <div class="color" id="cor1">
+            <div class="color selected" id="cor1">
 
             </div>
             <div class="color" id="cor2">
@@ -26,6 +26,9 @@
             <div class="color" id="cor4">
 
             </div>
+        </div>
+        <div id="pixel-board">
+            
         </div>
     </section>
     <script src="script.js"></script>
