--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
              <div id="blue" class="color"></div>
              <div id="yellow" class="color"></div>
              <div id="green" class="color"></div>
-             <div id="red" class="color"></div>
     </section>
 
-    <div id="pixel-board"></div>
+    <sectiom id="pixel-board"></sectiom>
     
 </body>
 <script src="script.js"></script>
