--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="pixel-row"></div>
     </section>
     <footer id=ft>
-      Desenvolvido por Amanda Sottani Nascimento
+      <p id=creditos >Desenvolvido por Amanda Sottani Nascimento</p>
     </footer>
     <script src="script.js"></script>
   </body>
