--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
             </div>
         </div>
+        <div id="buttons-conteiner">
+            <button type="submit" id="clear-board">Limpar</button>
+        </div>
         <div id="pixel-board">
             
         </div>
