--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
             </div>
         </div>
         <div id="buttons-conteiner">
-            <button type="submit" id="clear-board">Limpar</button>
+            <div id="clear-btn-container">
+                <button type="submit" id="clear-board">Limpar</button>
+            </div>            
+            <div id="input-container">
+                <label for="board-size">Selecione o tamanho do quadro:</label>
+                <input type="number" id="board-size" min="1" max="50">
+                <button type="submit" id="generate-board">VQV</button>
+            </div>
         </div>
         <div id="pixel-board">
             
