--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     </section>
 
     <sectiom id="pixel-board"></sectiom>
+
+    <div id="seletor" class="select"></div>
     
 </body>
 <script src="script.js"></script>
