--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
              <div id="green" class="color"></div>
     </section>
 
-    <sectiom id="pixel-board"></sectiom>
+    <div id="pixel-board"></div>
 
-    <div id="seletor" class="select"></div>
+    <div id="cor-selecionada" class="selecionada"></div>
     
 </body>
 <script src="script.js"></script>
