Setimo reguisito do  projeto

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <div class="color" id="green"></div>
     </section>
 
-    <section id="pixel-board">
+        <button type="button" id="clear-board">Limpar</button> 
+    
+        <section id="pixel-board">
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
@@ -56,5 +58,6 @@
             <div class="pixel"></div>
 </section>
 
+<script src="script.js"></script>
 </body>
 </html>
