--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Pixels Art</title>
 </head>
@@ -10,6 +10,12 @@
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
-    
+    <section id="color-palette">
+        <div class="color" id="cor1"></div>
+        <div class="color" id="cor2"></div>
+        <div class="color" id="cor3"></div>
+        <div class="color" id="cor4"></div>
+    </section>
+    <script src="script.js"></script>
 </body>
 </html>
